# Headtracking-AR-Rendering

./: CMakeLists.txt  readme.md
AsusTest/: CMakeLists.txt
AsusTest/include/AsusTest/: CMakeLists.txt
AsusTest/src/: CMakeLists.txt  Viewer.cpp  glext.h  main.cpp  viewerMain.cpp
AsusXtionSensor/: CMakeLists.txt
AsusXtionSensor/include/AsusXtionSensor/: AsusXtionSensor.h  CMakeLists.txt  Streamer.h
AsusXtionSensor/src/: AsusXtionSensor.cpp  CMakeLists.txt  main.cpp
FaceDetection/: CMakeLists.txt
FaceDetection/include/FaceDetection/: FaceDetection.h  version.h.in
FaceDetection/src/: CMakeLists.txt  FaceDetection.cpp  main.cpp
FaceDetectionComponent/: CMakeLists.txt
FaceDetectionComponent/include/FaceDetectionComponent/: CMakeLists.txt  FaceDetectionComponent.h
FaceDetectionComponent/src/: CMakeLists.txt  FaceDetectionComponent.cpp  main.cpp
FaceDetectionFilter/: CMakeLists.txt
FaceDetectionFilter/include/FaceDetectionFilter/: CMakeLists.txt  FaceDetectionFilter.h  FirstOrderScalarFilter.h  FirstOrderScalarGainFilter.h  KalmanFilter.h
FaceDetectionFilter/src/: CMakeLists.txt  FaceDetectionFilter.cpp  FirstOrderScalarFilter.cpp  FirstOrderScalarGainFilter.cpp  main.cpp
FaceDetectionFilter/tests/: CMakeLists.txt  FaceDetectionFilter.cpp  FirstOrderScalarFilter.cpp  KalmanFilter.cpp
Gui/: CMakeLists.txt
Gui/src/: App.cpp  App.h  CMakeLists.txt  Camera.cpp  Camera.h  GLWidget.cpp  GLWidget.h  Keyboard.cpp  Keyboard.h  KeyboardControl.cpp  KeyboardControl.h  Main.cpp  Mainwindow.cpp  Mainwindow.h  Mainwindow.ui  Renderer.cpp  Renderer.h
catch/: CMakeLists.txt
catch/include/catch/: CMakeLists.txt  EqualsAngle.hpp  EqualsMat.hpp
catch/src/: CMakeLists.txt
cmake/: FindOpenFace.cmake
common/include/common/: CMakeLists.txt  Maybe.h  csvRow.h  fileStorageUtil.h  get_arguments.h  math.h  measureTime.h  rotationMatrices.h  setUtils.h  simpleStatistics.h  simpleStatistics.h.cpp  stringUtils.h  timing.h  types.h  version.h.in
common/src/: CMakeLists.txt  csvRow.cpp  measureTime.cpp  stringUtils.cpp  timing.cpp
project_template/: CMakeLists.txt
project_template/include/TEMPLATE/: CMakeLists.txt
project_template/src/: CMakeLists.txt  main.cpp
py/: Untitled.ipynb
